<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_location_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/location_geonameId"/>

    <TextView
        android:id="@+id/text_location_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/label_location_id"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_id"
        android:text="@string/location_name"/>

    <TextView
        android:id="@+id/text_location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/label_location_name"
        android:layout_below="@id/text_location_id"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_countryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_name"
        android:text="@string/location_countryCode"/>

    <TextView
        android:id="@+id/text_location_countryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/label_location_countryCode"
        android:layout_below="@id/text_location_name"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_fclName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_countryCode"
        android:text="@string/location_fclName" />

    <TextView
        android:id="@+id/text_location_fclName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/label_location_fclName"
        android:layout_below="@id/text_location_countryCode"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_toponym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_fclName"
        android:text="@string/location_toponymName"/>

    <TextView
        android:id="@+id/text_location_toponym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_location_toponym"
        android:layout_below="@+id/text_location_fclName"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_codeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_toponym"
        android:text="@string/location_fcodeName"/>

    <TextView
        android:id="@+id/text_location_codeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_location_codeName"
        android:layout_below="@+id/text_location_toponym"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_wiki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_codeName"
        android:text="@string/location_wikipedia"/>

    <TextView
        android:id="@+id/text_location_wiki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_location_wiki"
        android:layout_below="@+id/text_location_codeName"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_fcl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_wiki"
        android:text="@string/location_fcl"/>

    <TextView
        android:id="@+id/text_location_fcl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_location_fcl"
        android:layout_below="@+id/text_location_wiki"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_fcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_fcl"
        android:text="@string/location_fcode"/>

    <TextView
        android:id="@+id/text_location_fcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_location_fcode"
        android:layout_below="@+id/text_location_fcl"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_fcode"
        android:text="@string/location_population"/>

    <TextView
        android:id="@+id/text_location_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_location_population"
        android:layout_below="@+id/text_location_fcode"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_population"
        android:text="@string/location_latitude"/>

    <TextView
        android:id="@+id/text_location_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_location_latitude"
        android:layout_below="@+id/text_location_population"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_location_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_location_latitude"
        android:text="@string/location_longitude"/>

    <TextView
        android:id="@+id/text_location_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_location_longitude"
        android:layout_below="@+id/text_location_latitude"
        android:ellipsize="end"
        android:singleLine="true" />

</RelativeLayout>